# watermelon

./: CMakeLists.txt  README.md  main.cpp
include/: language.h  parser.h  patternmatching.h  tokenization.h
src/: language.cpp  patternmatching.cpp  tokenization.cpp
src/tokenization/: tokenizer.cpp
